<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Comparison_Frag1">

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:text="@string/backButton"
        android:gravity="start"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/frag1Head"
        android:gravity="center"
        android:textSize="32sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/textView2"
        android:layout_gravity="center"
        android:text=""
        android:gravity="center"
        android:visibility="invisible"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/border"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9"
                    android:text="@string/oneDimeFFT"
                    android:gravity="center"
                    android:textSize="18sp"
                    />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="match_parent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView10"
                    android:text="@string/oneDimeFFTvalue"

                    />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="6dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/oneDimeFFT2"
                    android:textSize="18sp"
                    />
                <Space
                    android:layout_width="16dp"
                    android:layout_height="match_parent"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/oneDimeFFT2value"
                    />


            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="80dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart1"
            android:layout_width="match_parent"
            android:layout_height="250dp" />
    </RelativeLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="19dp" />



</LinearLayout>